
syntax = "proto3";

option go_package = "github.com/structx/pb/raft.v1";

package raft;

service RaftService {
    rpc RequestVote(RequestVoteRequest) returns (RequestVoteResponse) {}
    rpc AppendEntries(AppendEntriesRequest) returns (AppendEntriesResponse) {}
}

message LogEntry {
    int64 term = 1;
    int64 index = 2;
    string command = 3;
}

message AppendEntriesRequest {
    int64 term = 1;
    string leader_id = 2;
    int64 prev_log_index = 3;
    int64 prev_log_term = 4;
    repeated LogEntry entries = 5;
    int64 leader_commit = 6;
}

message AppendEntriesResponse {
    int64 term = 1;
    bool success = 2;
}

message RequestVoteRequest {
    int64 term = 1;
    string candidate_id = 2;
    int64 last_log_index = 3;
    int64 last_log_term = 4;
}

message RequestVoteResponse {
    int64 term = 1;
    bool vote_granted = 2;
}

